# qvesh

./: .gitignore  ConsoleApplication2.sln  README.md
ConsoleApplication2/: ConsoleApplication2.vcxproj  ConsoleApplication2.vcxproj.filters  Event.h  EventManager.cpp  EventManager.h  main.cpp
event_manager/: CMakeLists.txt  run_tests.bat
event_manager/src/: CMakeLists.txt  Event.cpp  Event.h  EventManager.cpp  EventManager.h  events.txt  main.cpp
event_manager/tests/: CMakeLists.txt  test_main.cpp
event_manager/tests/test_data/: invalid_events.txt  mixed_events.txt  valid_events.txt
